[gd_scene load_steps=2 format=3 uid="uid://deg0abo5s6t7h"]

[ext_resource type="Script" path="res://newspaper.gd" id="1_toesk"]

[node name="Newspaper" type="Node2D"]
script = ExtResource("1_toesk")

[node name="BackToMainBtn" type="Button" parent="."]
offset_right = 146.0
offset_bottom = 82.0
text = "home
"

[node name="Label" type="Label" parent="."]
offset_left = 182.0
offset_right = 417.0
offset_bottom = 82.0
text = "Newspaper 
"

[node name="UnitsUpBtn" type="Button" parent="."]
offset_left = 36.0
offset_top = 197.0
offset_right = 182.0
offset_bottom = 256.0
text = "Units+
"

[node name="ValueUpBtn" type="Button" parent="."]
offset_left = 330.0
offset_top = 197.0
offset_right = 476.0
offset_bottom = 256.0
text = "Value+
"

[node name="TotalMoneyMadeLabel" type="Label" parent="."]
offset_left = 231.0
offset_top = 107.0
offset_right = 266.0
offset_bottom = 145.0
text = "0"

[node name="TotalUnitsLabel" type="Label" parent="."]
offset_left = 81.0
offset_top = 164.0
offset_right = 121.0
offset_bottom = 187.0
text = "0"

[node name="TotalValueLabel" type="Label" parent="."]
offset_left = 380.0
offset_top = 164.0
offset_right = 420.0
offset_bottom = 187.0
text = "0"

[node name="rate" type="Label" parent="."]
offset_left = 330.0
offset_right = 417.0
offset_bottom = 37.0
text = "0"

[connection signal="button_up" from="BackToMainBtn" to="." method="_on_back_to_main_btn_button_up"]
[connection signal="button_up" from="UnitsUpBtn" to="." method="_on_units_up_btn_button_up"]
[connection signal="button_up" from="ValueUpBtn" to="." method="_on_value_up_btn_button_up"]
